[package]
name = "thunder_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
clap = { version = "4.0.29", features = ["derive"] }
image = "0.24.5"
nalgebra = "0.31.4"
russimp = "1.0.6"
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
