[package]
name = "thunder_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
clap = { version = "4.3.11", features = ["derive"] }
image = "0.24.5"
nalgebra = {version = "0.31.4", features = ["bytemuck"] }
renderdoc = "0.10.1"
russimp = "1.0.6"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
vulkano-win = "0.34.0"
winit = "0.28.6"
